Fix back-to-top button position on mobile - move above mini player

--- a/style.css
+++ b/style.css
@@ -1515,7 +1515,7 @@ body {
 
 @media (max-width: 768px) {
   .back-to-top {
-    bottom: 90px;
+    bottom: 130px;
     right: 20px;
     width: 45px;
     height: 45px;
